v3.10.0 (XXXX-XX-XX)
--------------------

* Added support for AT LEAST quantifier for SEARCH.

* Fixed BTS-335 Ranges parsing fixed for nested queries.

* Updated arangosync to v2.12.0-preview-3.

* Added new AQL function `VALUE` capable of accessing object attribute by a
  specified path.

* Fixed BTS-918 (incorrectly navigating back 1 level in history when a
  modal-dialog element is present).

* Added OFFSET_INFO function (Enterprise Edition only) to support search results
  highliting.

* Updated Rclone to v1.59.0.

* Fixed BTS-902 (clicking on the search icon in the analyzers filter input used
  to take the user to the collections view).

* Fixed BTS-852 (user's saved queries used to disappear after updating user
  profile).

* ArangoSearch nested search feature (Enterprise Edition): Added ability to
  index and search nested documents with ArangoSearch views.

* Updated OpenSSL to 1.1.1q and OpenLDAP to 2.6.3.

* Fixed handling of illegal edges in Enterprise Graphs. Adding an edge to a
  SmartGraph vertex collection through document API caused incorrect sharding of
  the edge. Now this edge is rejected as invalid. (BTS-906)

* Added CSP recommended headers to Aardvaark app for better security.

* Added more specific process exit codes for arangod and all client tools, and
  changed the executables' exit code for the following situations:

  - an unknown startup option name is used: previously the exit code was 1. Now
    the exit code when using an invalid option is 3 (symbolic exit code name
    EXIT_INVALID_OPTION_NAME).
  - an invalid value is used for a startup option (e.g. a number that is outside
    the allowed range for the option's underlying value type, or a string value
    is used for a numeric option): previously the exit code was 1. Now the exit
    code for these case is 4 (symbolic exit code name
    EXIT_INVALID_OPTION_VALUE).
  - a config file is specified that does not exist: previously the exit code was