@@ -417,7 +417,14 @@ ResultT<std::pair<std::string, bool>> RestCursorHandler::forwardingTarget() {
     return {std::make_pair(StaticStrings::Empty, false)};
   }
   auto& ci = server().getFeature<ClusterFeature>().clusterInfo();
-  return {std::make_pair(ci.getCoordinatorByShortID(sourceServer), false)};
+  auto coordinatorId = ci.getCoordinatorByShortID(sourceServer);
+
+  if (coordinatorId.empty()) {
+    return ResultT<std::pair<std::string, bool>>::error(
+        TRI_ERROR_CURSOR_NOT_FOUND, "cannot find target server for cursor id");
+  }
+
+  return {std::make_pair(std::move(coordinatorId), false)};
 }
 
 ////////////////////////////////////////////////////////////////////////////////
