@@ -1,5 +1,5 @@
 /* jshint globalstrict:true, strict:true, maxlen: 5000 */
-/* global assertTrue, assertFalse, assertEqual, require*/
+/* global assertTrue, assertFalse, assertEqual, assertMatch, require*/
 
 ////////////////////////////////////////////////////////////////////////////////
 /// DISCLAIMER
@@ -33,6 +33,7 @@ const request = require("@arangodb/request");
 const url = require('url');
 const _ = require("lodash");
 const deriveTestSuite = require('@arangodb/test-helper').deriveTestSuite;
+const errors = require('internal').errors;
 const dbs = ["testDatabase", "abc123", "maçã", "mötör", "😀", "ﻚﻠﺑ ﻞﻄﻴﻓ", "かわいい犬"];
 const getCoordinatorEndpoints = require('@arangodb/test-helper').getCoordinatorEndpoints;
 
@@ -239,6 +240,49 @@ function CursorSyncSuite (databaseName) {
       const cursorId = result.id;
       url = `${baseCursorUrl}/${cursorId}`;
       result = sendRequest('DELETE', url, {}, false);
+
+      assertFalse(result === undefined || result === {});
+      assertFalse(result.error);
+      assertEqual(result.code, 202);
+
+      url = `${baseCursorUrl}/${cursorId}`;
+      result = sendRequest('POST', url, {}, false);
+
+      assertFalse(result === undefined || result === {});
+      assertTrue(result.error);
+      assertEqual(result.code, 404);
+    },
+    
+    testCursorForwardingDeletionWrongId: function() {
+      let url = baseCursorUrl;
+      const query = {
+        query: `FOR doc IN @@coll LIMIT 4 RETURN doc`,
+        count: true,
+        batchSize: 2,
+        bindVars: {
+          "@coll": cns[0]
+        }
+      };
+      let result = sendRequest('POST', url, query, true);
+
+      assertFalse(result === undefined || result === {});
+      assertFalse(result.error);
+      assertEqual(result.code, 201);
+      assertTrue(result.hasMore);
+      assertEqual(result.count, 4);
+      assertEqual(result.result.length, 2);
+
+      const cursorId = result.id;
+      // send using wrong id
+      result = sendRequest('DELETE', `${baseCursorUrl}/12345${cursorId}`, {}, true);
+      assertEqual(errors.ERROR_CURSOR_NOT_FOUND.code, result.errorNum);
+      assertMatch(/cannot find target server/, result.errorMessage);
+      
+      result = sendRequest('DELETE', `${baseCursorUrl}/12345${cursorId}`, {}, false);
+      assertEqual(errors.ERROR_CURSOR_NOT_FOUND.code, result.errorNum);
+      assertMatch(/cannot find target server/, result.errorMessage);
+      
+      result = sendRequest('DELETE', `${baseCursorUrl}/${cursorId}`, {}, true);
 
       assertFalse(result === undefined || result === {});
       assertFalse(result.error);
