@@ -1,6 +1,11 @@
 v3.10.0 (XXXX-XX-XX)
 --------------------
 
++* Improve error handling for passing wrong transaction ids / cursor ids /
++  pregel job ids to request forwarding. Also prevent the error "transaction
++  id not found" in cases when request forwarding was tried to a coordinator
++  that was recently restarted.
+
 * Added support for AT LEAST quantifier for SEARCH.
 
 * Fixed BTS-335 Ranges parsing fixed for nested queries.
